--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@types/node": "^12.12.7",
     "axios": "^0.19.0",
-    "discord.js": "^11.5.1"
+    "discord.js": "^11.5.1",
+    "fuzzyset.js": "0.0.8"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/fuzzyset.js": "0.0.2",
     "eslint": "^6.6.0",
     "nodemon": "^1.19.4",
     "prettier": "^1.19.1",
