--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^12.12.7",
-    "axios": "^0.19.0",
-    "discord.js": "^11.5.1",
-    "fuzzyset.js": "0.0.8"
+    "axios": "^0.21.1",
+    "discord.js": "^12.5.2",
+    "fuzzyset.js": "1.0.6"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/fuzzyset.js": "0.0.2",
+    "@types/ws": "^7.4.1",
     "@typescript-eslint/eslint-plugin": "^2.6.1",
     "@typescript-eslint/parser": "^2.6.1",
     "eslint": "^6.6.0",
